--- a/README.Rmd
+++ b/README.Rmd
@@ -19,36 +19,13 @@ knitr::opts_chunk$set(
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 <!-- badges: end -->
 
-The goal of shift is to ...
+The goal of shift (the SHiny Improved Forecasting Tool) is to improve the forecasting ability of the DVSA.
 
 ## Installation
 
-You can install the released version of shift from [CRAN](https://CRAN.R-project.org) with:
-
-``` r
-install.packages("shift")
-```
-
-And the development version from [GitHub](https://github.com/) with:
+You can install the development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
 devtools::install_github("saralsmith/SHIFT")
 ```
-## Example
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
